<resources>
    <string name="app_name">Silver Scoop</string>

    <string name="ip_address">13.234.239.174/foodrunner</string>

    <string name="token">test</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>

    <string name="add_to_cart_btn">Add</string>
    <string name="proceed_to_cart_btn">Proceed to Cart</string>
    <string name="select_from_menu">Select from Menu:</string>
    <string name="ordering_from">Ordering From: </string>
    <string name="place_order">Place Order (Rs)</string>

    <string name="shared_preferences">RestaurantPreference</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="question1">Q1. What is Silver Scoop?</string>
    <string name="answer1">A1. Silver Scoop is a one stop application to get rid of your hunger.At Silver Scoop we strive to add value to your business. We understand the challenges you face on a daily basis in sourcing the best quality food and packaging material. Silver Scoop takes care of all your packaging needs and caters you the best food.</string>
    <string name="question2">Q2. How are you guys are different?</string>
    <string name="answer2">A2. Best service - We ensure best service is provided to users and our motto is customer satisfaction. Best Product- We only list the products which have passed our quality tests and are the best suitable for delivery.</string>
    <string name="question3">Q3. Is the person delivering my order verified ?</string>
    <string name="answer3">A3. Our each service member is appointed after complete examinations like police verification</string>
    <string name="question4">Q4. What is the refund policy?</string>
    <string name="answer4">A4. If you have any trouble with your orders, feel free to contact us.</string>
    <string name="question5">Q5. Do you deliver in my area?</string>
    <string name="answer5">A5. If your location is within the parameters,  We Will Reach You. </string>
    <string name="no_match_found">No Match Found !!!</string>
    <string name="no_orders_placed">No Orders Placed</string>
    <string name="your_previous_orders">Your Previous Orders</string>
    <string name="enter_the_otp_received">Enter the OTP recieved</string>
    <string name="order_placed_successfully">Order Placed Successfully</string>


</resources>
